# pandasai-app-gradio

./: README.md  pyproject.toml
src/: app_.py  main.py  utils.py
src/components/: faq.py
tests/: app.py
